--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="bg-dark text-danger">
@@ -20,7 +21,7 @@
     <div class="container">
         <h1>Registration</h1>
         <form action="/register" method="post" class="bg-dark text-light">
-            <h2 class="text-primary">Register</h2>
+            <h2 class="text-primary register">Register</h2>
             {% with messages = get_flashed_messages(category_filter=['register']) %}
                 {% if messages %}
                 <div class="alert alert-danger">
@@ -47,11 +48,11 @@
                 <label for="password">Password:</label>
                 <input type="password" name="password" class="form-control">
             </div>
-            <input type="submit" value="Register User" name="btn" id="button">
+            <input type="submit" value="Register" name="btn" class="btn btn-outline-success my-5">
         </form>
     </div>
     <div class="container my-5">
-        <h2 class="text-primary">Already have an Account? Log in</h2>
+        <h2 class="text-primary">Already have an Account?</h2>
         <form action="/login" method="post" class="bg-dark text-light">
             <h2 class="text-primary">Login</h2>
             {% with messages = get_flashed_messages(category_filter=['login']) %}
@@ -71,7 +72,7 @@
                 <label for="password">Password:</label>
                 <input type="password" name="password" class="form-control">
             </div>
-            <input type="submit" value="Login" name="btn" id="button">
+            <input type="submit" value="Login" name="btn" class="btn btn-outline-primary my-5">
         </form>            
     </div>
 </body>
